/* This file is generated by protobuf-toolkit. DO NOT EDIT! */

syntax = "proto2";

package youtube.api.innertube;

import "player.response.proto";

option cc_enable_arenas = true;
option java_multiple_files = true;
option java_package = "com.google.protos.youtube.api.innertube";
option objc_class_prefix = "YTI";
option optimize_for = CODE_SIZE;

// https://youtubei.googleapis.com/youtubei/v1/get_watch

message GetWatchResponse {
	//optional ResponseContext responseContext = 1;
	optional PlayerResponse playerResponse = 2;
	optional WatchNextResponse watchNextResponse = 3;
	optional string getPlayerErrorMsg = 4;
	optional string getWatchNextErrorMsg = 5;

	//optional .youtube.unknown.Unnamed1894 frameworkUpdates = 777;
}

message WatchNextResponse {};
