syntax = "proto3";

option optimize_for = CODE_SIZE;

// https://youtubei.googleapis.com/youtubei/v1/player
message Player {
	//Context responseContext = 1;
	//PlaybackTracking playbackTracking = 9;
	//StreamingData streamingData = 4;
	//PlaybackTracking playbackTracking = 9;
	//HeartbeatParams heartbeatParams = 6;
	Captions captions = 10;
	//VideoDetails videoDetails = 11;
	//repeated Annotations annotations = 13;
	//Storyboards storyboards = 16;
	//Attestation attestation = 22;
	//Endscreen endscreen = 32;
};

message Captions {
	PlayerCaptionsTracklistRenderer playerCaptionsTracklistRenderer = 51621377;
};

message PlayerCaptionsTracklistRenderer {
	repeated CaptionTracks captionTracks = 1;
	repeated AudioTracks audioTracks = 2;
	repeated TranslationLanguages translationLanguages = 3;
	optional int32 defaultAudioTrackIndex = 4;
	optional int32 defaultCaptionTrackIndex = 6;
};

message CaptionTracks {
	string baseUrl = 1;
	Name name = 2;
	string vssId = 3;
	string languageCode = 4;
	optional string kind = 5;
	optional bool rtl = 6;
	bool isTranslatable = 7;
};

message AudioTracks {
	repeated int32 captionTrackIndices = 2 [packed = false];
	optional int32 defaultCaptionTrackIndex = 3;
	optional int32 forcedCaptionTrackIndex = 4;
	optional int32 visibility = 5;
	optional bool hasDefaultTrack = 6;
	optional bool hasForcedTrack = 7;
	optional string audioTrackId = 8;
	optional int32 captionsInitialState = 11;
};

message TranslationLanguages {
	string languageCode = 1;
	Name languageName = 2;
	//??? ??? = 3;
};

message Name {
	repeated Runs runs = 1;
};

message Runs {
	string text = 1;
};

/*
enum ProjectionType {
	RECTANGULAR = 1;
};

enum AudioQuality {
	AUDIO_QUALITY_MEDIUM = 20;
};

enum VisibilityType {
	UNKNOWN = 0;
	OFF = 1;
	ON = 2;
};

enum CaptionsInitialStateType {
	CAPTIONS_INITIAL_STATE_UNKNOWN = 0;
	CAPTIONS_INITIAL_STATE_ON_REQUIRED = 1;
	CAPTIONS_INITIAL_STATE_OFF_REQUIRED = 2;
	CAPTIONS_INITIAL_STATE_ON_RECOMMENDED = 3;
	CAPTIONS_INITIAL_STATE_OFF_RECOMMENDED = 4;
};
*/
